<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    tools:context="pt.example.rf.conversorunidades.ConversoesActivity">

    <Spinner
        android:id="@+id/spinnerOrigem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/dialog"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextValorIntroduzido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.9"
            android:ems="10"
            android:hint="@string/introduzir_valor3"
            android:inputType="numberSigned|numberDecimal"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonTrocar"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_rotate" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/dialog2"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonConverter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/converter"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonAdicionarConversaoFavorita"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/btn_star_big_on"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewValorConvertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</LinearLayout>
