<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="pt.example.rf.conversorunidades.ConversoesFavoritasActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/editTextIntroduzirValor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduzir_valor"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/textViewUnidadeOrigemDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/nome_conversao"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:theme="@style/AppTheme" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonConverter2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/converter2"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonApagarFavorito"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:text="Button"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewResultado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/resultado2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonVoltar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</LinearLayout>
