<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="pt.example.rf.conversorunidades.DefinicoesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/casas_decimais"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton2cd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radioButton3cd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonApgarTodosFavoritos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/apagar_convers_es_favoritas"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonSobre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableRight="@android:drawable/ic_menu_info_details"
        android:text="@string/sobre_a_aplicacao"
        android:textAlignment="viewStart"
        tools:ignore="RtlHardcoded" />

</LinearLayout>
